Got the studyinfo, groupinfo, and subjectinfo pages to reflect information based on state of the website.
Also updated subjectinfo page/controller to better reflect subject's
full info and update all areas.

--- a/public/views/studyinfo.client.view.html
+++ b/public/views/studyinfo.client.view.html
@@ -17,7 +17,7 @@
                 <thead><tr><th>Groups</th><th>Complience</th></tr></thead>
                 <tbody>
                     <tr ng-repeat="group in groups">
-                        <td><button class="btn" style="background:transparent" ng-click="Current.set_group(group.groupID, group.studyGroupName)" ui-sref="group-info">{{group.studyGroupName}}</button></td>
+                        <td><button ng-click="Current.set_group(group.groupID, group.studyGroupName)" ui-sref="group-info" class="btn" style="background:transparent">{{group.studyGroupName}}</button></td>
                         <td>{{group.complience}}</td>
                     </tr>
                 </tbody>
