--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -52,14 +52,14 @@
           <div class="row">
             <!--Street Address-->
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-              <input name="Height" required="" type="text" placeholder="Height" autocomplete="off" ng-model="height" class="form-control"/>
+              <input name="Height" ng-required="true" type="number" placeholder="Height (inches)" autocomplete="off" ng-model="information.height" class="form-control"/>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-              <input name="Weight" required="" type="text" placeholder="Weight" autocomplete="off" ng-model="Weight" class="form-control"/>
+              <input name="Weight" ng-required="true" type="number" placeholder="Weight (pounds)" autocomplete="off" ng-model="information.weight" class="form-control"/>
             </div>
             <!--City-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <input name="Age" required="" type="text" placeholder="Age" autocomplete="off" ng-model="Age" class="form-control"/>
+              <input name="Age" ng-required="true" type="number" placeholder="Age" autocomplete="off" ng-model="information.age" class="form-control"/>
             </div>
             <!--Gender-->
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
