--- a/app/views/includes/breadcrumb.jade
+++ b/app/views/includes/breadcrumb.jade
@@ -2,7 +2,7 @@ nav#breadcrumb(data-ng-controller="breadcrumbController")
     div(class="well")
         div(class="row")
             div(class="col-xs-4 col-sm-4 col-md-4 col-lg-4")
-                select.form-control(name="Study" ng-model="current_study" ng-change="study_change(current_study)")
+                select.form-control(name="Study" id="study1" ng-model="current_study" ng-change="study_change(current_study)")
                     option(data-ng-repeat="study in studies", value="{{study}}", ui-sref="study-info") {{study.studyName}}
             div(class="col-xs-4 col-sm-4 col-md-4 col-lg-4")
                 select.form-control(name="Group", ng-model="current_group" ng-change="group_change(current_group)")
