Renamed controllers to match view name changes
Updated Footer to have the new controller names

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -22,21 +22,21 @@ div#scripts
     //Application Controllers
     script(type='text/javascript', src='/js/controllers/header.js')
     script(type='text/javascript', src='/js/controllers/breadcrumb.js')
-    script(type='text/javascript', src='/js/controllers/sidebarCtrl.js')
-    script(type='text/javascript', src='/js/controllers/subject_search.js')
+    script(type='text/javascript', src='/js/controllers/sidebar.js')
+    script(type='text/javascript', src='/js/controllers/subject-search.js')
 
     // View Controllers
     script(type='text/javascript', src='/js/controllers/register.js')
-    script(type='text/javascript', src='/js/controllers/home.client.controller.js')
+    script(type='text/javascript', src='/js/controllers/index.js')
     script(type='text/javascript', src='/js/init.js')
-    script(type='text/javascript', src='/js/controllers/subjectinfo.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/groupinfo.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/reportController.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/studyinfo.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/subject.status.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/subjectselect.client.controller.js')
-    script(type='text/javascript', src='/js/controllers/subjectSetupController.js')
-    script(type='text/javascript', src='/js/controllers/subject_search.js')
+    script(type='text/javascript', src='/js/controllers/subject-info.js')
+    script(type='text/javascript', src='/js/controllers/group-info.js')
+    script(type='text/javascript', src='/js/controllers/reports.js')
+    script(type='text/javascript', src='/js/controllers/study-info.js')
+    script(type='text/javascript', src='/js/controllers/subject-status.js')
+    script(type='text/javascript', src='/js/controllers/subject-select.js')
+    script(type='text/javascript', src='/js/controllers/subject-setup.js')
+    script(type='text/javascript', src='/js/controllers/subject-search.js')
     <script type="text/javascript" src="/js/controllers/angular-fusioncharts.min.js"></script>
 
     if (process.env.NODE_ENV == 'development')
