--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -157,7 +157,7 @@
           
           <!--Personal Contact-->
           <div class="row">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="row">
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left">
                   <t style="font-weight:bold">Primary Phone:</t>
@@ -268,7 +268,7 @@
           </div><br>
         </div>
         <div align="center" class="container">
-          <input class="btn btn-default" type="submit" ng-click="submit()" value="Enroll Subject" />
+          <input class="btn btn-default" type="submit" id="register" ng-click="submit()" value="Enroll Subject" />
           <a class="btn btn-default" role="button" ng-click="cancel()">Cancel</a>
         </div>
       </form><br><br>
