--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -2,6 +2,8 @@
 
     <div id="register-form">
       <form role="form" name="register">
+        <!-- Hidden Info for post -->
+        <input type="text" name="UserID" ng-model="information.uid" ng-hide="true">
         <!--Subject Contact-->
         <div align="center" class="form-group">
           <h1>
@@ -162,10 +164,10 @@
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left">
                   <t style="font-weight:bold">Primary Phone:</t>
                 </div>
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                   <input name="Area_Code1" ng-required="true" type="number" pattern=".{3}" placeholder="###" autocomplete="off" ng-model="information.areacode1" class="form-control"/>
                 </div>
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                   <input name="Primary_Phone" ng-required="true" type="number" pattern=".{7}" placeholder="#######" autocomplete="off" ng-model="information.phone1" class="form-control"/>
                 </div>
               </div>
@@ -175,15 +177,15 @@
             </div>
           </div><br>
           <div class="row">
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
               <div class="row">
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="text-align:left">
                   <t style="font-weight:bold">Secondary Phone:</t>
                 </div>
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                   <input name="Area_Code2" type="number" pattern=".{3}" placeholder="###" autocomplete="off" ng-model="information.areacode2" class="form-control"/>
                 </div>
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                   <input name="Secondary_Phone" type="number" pattern=".{7}" placeholder="#######" autocomplete="off" ng-model="information.phone2" class="form-control"/>
                 </div>
               </div>
