--- a/public/views/subject-info.html
+++ b/public/views/subject-info.html
@@ -9,7 +9,7 @@
           <p>Subject ID: {{information.id}}</p>
 
           <!-- Patients  Full Name -->
-          <p>Full Name: {{information.title}} {{information.firstname}} {{information.middlename}} {{information.lastname}} {{information.suffix}}</p>
+          <p id="testsubjectinfo">Full Name: {{information.title}} {{information.firstname}} {{information.middlename}} {{information.lastname}} {{information.suffix}}</p>
 
           <!-- Reader ID -->
           <p>Reader ID: {{information.readerID}}</p>
