--- a/public/views/subject-setup.html
+++ b/public/views/subject-setup.html
@@ -103,7 +103,7 @@
     -->
         <div class="row">
             <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-sm-offset-3 col-xs-offset-3 col-md-offset-3 col-lg-offset-3">
-                <button class="btn btn-default" type="submit" ng-click="save()">Save</button>
+                <button class="btn btn-default" type="submit" id="enroll" ng-click="save()">Save</button>
             </div>
         </div>
     </form>
